force-app/main/default/objects/Performance_Data__c/Performance_Data__c.object-meta.xml
<CustomObject>
    <label>Performance Data</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>Performance Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performances Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>