force-app/main/default/objects/Performance_Data__c/fields/Amount_refunded_last_20_days__c.field-meta.xml
<CustomField>
    <fullName>Amount_refunded_last_20_days__c</fullName>
    <label>Amount refunded last 20 days</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>