force-app/main/default/objects/Performance_Data__c/fields/Average_number_of_messages_order__c.field-meta.xml
<CustomField>
    <fullName>Average_number_of_messages_order__c</fullName>
    <label>Average number of messages / order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>