force-app/main/default/objects/Performance_Data__c/fields/Blank_Record_Business__c.field-meta.xml
<CustomField>
    <fullName>Blank_Record_Business__c</fullName>
    <formula>IF( Sales__c + Listings__c + Stocks__c + GMV__c + Buyboxes__c + Number_of_Buyback_orders_Global__c + Number_of_Buyback_orders_paid__c + Number_of_Buyback_orders_received__c + Number_of_online_listings__c + Number_of_bids_on_diversification__c =0,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank Record (Business)</label>
    <type>Checkbox</type>
</CustomField>