force-app/main/default/objects/Performance_Data__c/fields/Blank_Record_Quality__c.field-meta.xml
<CustomField>
    <fullName>Blank_Record_Quality__c</fullName>
    <formula>IF(
 Amount_refunded_last_20_days__c + CSAT__c + Cancellation_rate_functional__c + Cancellations__c + Cases_accessories__c + Cases_Cancellation__c + Cases_CSAT__c + Cases_Defective__c + Cases_Delivery__c + Cases_Esthetic__c + Cases_Late_Untracked_Delivery__c + Cases_Late_responses__c + Cases_NRR__c + Cases_Untracked_Delivery__c + Cases_Wrong__c + Contact_Rate__c + Cancellation_rate_functional__c + Cancellation_rate_non_functional__c + Cases_Average_number_of_messages_order__c + Cases_Cancellation_rate_functional__c + Cases_Cancellation_rate_non_functional__c + Cases_Counter_offer_rate_functional__c + Cases_Counter_offer_rate_non_functional__c + Cases_Processing_time_functional__c + Cases_Processing_time_non_functional__c + Cases_Unprocessed_order_rate_D_2__c + Cases_Response_time__c +  Defective_Battery_issue__c + Defectives__c + Missing_Accessories__c + Payment_rate__c + Pending_SAV_24_hours__c + Wrong_items__c+  Untracked_Delivery_Rate__c + Unprocessed_order_rate_D_2__c + Response_time__c + Processing_time_non_functional__c + Processing_time_functional__c + Pending_SAV_24_hours__c   +  Sales_limitation__c  =0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank Record (Quality)</label>
    <type>Checkbox</type>
</CustomField>