force-app/main/default/objects/Performance_Data__c/fields/Buyback_Late_Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Late_Response_Rate__c</fullName>
    <label>Buyback Late Response Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>