force-app/main/default/objects/Performance_Data__c/fields/Buyboxes__c.field-meta.xml
<CustomField>
    <fullName>Buyboxes__c</fullName>
    <label>Buyboxes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>