force-app/main/default/objects/Performance_Data__c/fields/Cancellation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Rate__c</fullName>
    <label>Cancellation rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>