force-app/main/default/objects/Performance_Data__c/fields/Cancellation_rate_functional__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_rate_functional__c</fullName>
    <label>Cancellation rate (functional)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>