force-app/main/default/objects/Performance_Data__c/fields/Cancellations__c.field-meta.xml
<CustomField>
    <fullName>Cancellations__c</fullName>
    <label>Cancellations</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>