force-app/main/default/objects/Performance_Data__c/fields/Cancelled_Cases__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Cases__c</fullName>
    <label>Cancelled cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>