force-app/main/default/objects/Performance_Data__c/fields/Cases_Average_number_of_messages_order__c.field-meta.xml
<CustomField>
    <fullName>Cases_Average_number_of_messages_order__c</fullName>
    <label>Cases Average number of messages / order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>