force-app/main/default/objects/Performance_Data__c/fields/Cases_Buyback_Late_Response__c.field-meta.xml
<CustomField>
    <fullName>Cases_Buyback_Late_Response__c</fullName>
    <label>Cases Buyback Late Response</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>