force-app/main/default/objects/Performance_Data__c/fields/Cases_Cancellation_rate_functional__c.field-meta.xml
<CustomField>
    <fullName>Cases_Cancellation_rate_functional__c</fullName>
    <label>Cases Cancellation rate (functional)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>