force-app/main/default/objects/Performance_Data__c/fields/Cases_Counter_offer_rate_non_functional__c.field-meta.xml
<CustomField>
    <fullName>Cases_Counter_offer_rate_non_functional__c</fullName>
    <label>Cases Counter-offer rate -non-functional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>