force-app/main/default/objects/Performance_Data__c/fields/Cases_Defective__c.field-meta.xml
<CustomField>
    <fullName>Cases_Defective__c</fullName>
    <label>Cases Defective</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>