force-app/main/default/objects/Performance_Data__c/fields/Cases_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Cases_Delivery__c</fullName>
    <label>Cases Delivery</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>