force-app/main/default/objects/Performance_Data__c/fields/Cases_Late_Processing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cases_Late_Processing_Rate__c</fullName>
    <label>Cases Late Processing Rate</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>