force-app/main/default/objects/Performance_Data__c/fields/Cases_NRR__c.field-meta.xml
<CustomField>
    <fullName>Cases_NRR__c</fullName>
    <label>Cases NRR</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>