force-app/main/default/objects/Performance_Data__c/fields/Cases_Pending_orders_rate__c.field-meta.xml
<CustomField>
    <fullName>Cases_Pending_orders_rate__c</fullName>
    <label>Cases Pending orders rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>