force-app/main/default/objects/Performance_Data__c/fields/Cases_Processing_time_non_functional__c.field-meta.xml
<CustomField>
    <fullName>Cases_Processing_time_non_functional__c</fullName>
    <label>Cases Processing time (non-functional)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>