force-app/main/default/objects/Performance_Data__c/fields/Cases_Response_time__c.field-meta.xml
<CustomField>
    <fullName>Cases_Response_time__c</fullName>
    <label>Cases Response time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>