force-app/main/default/objects/Performance_Data__c/fields/Cases_Unprocessed_order_rate_D_2__c.field-meta.xml
<CustomField>
    <fullName>Cases_Unprocessed_order_rate_D_2__c</fullName>
    <label>Cases Unprocessed order rate D+2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>