force-app/main/default/objects/Performance_Data__c/fields/Cases_Wrong__c.field-meta.xml
<CustomField>
    <fullName>Cases_Wrong__c</fullName>
    <label>Cases Wrong</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>