force-app/main/default/objects/Performance_Data__c/fields/Contact_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contact_Rate__c</fullName>
    <label>Contact rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>