force-app/main/default/objects/Performance_Data__c/fields/Counter_offer_rate_functional__c.field-meta.xml
<CustomField>
    <fullName>Counter_offer_rate_functional__c</fullName>
    <label>Counter-offer rate (functional)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>