force-app/main/default/objects/Performance_Data__c/fields/Counteroffer_Cases__c.field-meta.xml
<CustomField>
    <fullName>Counteroffer_Cases__c</fullName>
    <label>Counter-offer cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>