force-app/main/default/objects/Performance_Data__c/fields/Counteroffer_Rate__c.field-meta.xml
<CustomField>
    <fullName>Counteroffer_Rate__c</fullName>
    <label>Counter-offer rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>