force-app/main/default/objects/Performance_Data__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <label>C.S.A.T.</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>