force-app/main/default/objects/Performance_Data__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>If &quot;Temporal Granularity&quot; is &quot;Daily&quot;, date on which the data were captured.
If &quot;Temporal Granularity&quot; is &quot;Weekly&quot;, date of the first day of the week (monday) on which the data were captured.
If &quot;Temporal Granularity&quot; is &quot;Monthly&quot;, date of the first day of the month (day 1) on which the data were captured.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>