force-app/main/default/objects/Performance_Data__c/fields/Date_last_order_buyback__c.field-meta.xml
<CustomField>
    <fullName>Date_last_order_buyback__c</fullName>
    <label>Date last order buyback</label>
    <type>Date</type>
</CustomField>