force-app/main/default/objects/Performance_Data__c/fields/Defective_Battery_issue__c.field-meta.xml
<CustomField>
    <fullName>Defective_Battery_issue__c</fullName>
    <label>Defective - Battery issue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>