force-app/main/default/objects/Performance_Data__c/fields/Defectives__c.field-meta.xml
<CustomField>
    <fullName>Defectives__c</fullName>
    <label>Defectives</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>