force-app/main/default/objects/Performance_Data__c/fields/Delivery_Problems__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Problems__c</fullName>
    <label>Delivery Problems</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>