force-app/main/default/objects/Performance_Data__c/fields/Esthetic_Problems__c.field-meta.xml
<CustomField>
    <fullName>Esthetic_Problems__c</fullName>
    <label>Esthetic Problems</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>