force-app/main/default/objects/Performance_Data__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Concatenation of the Back Office Merchant primary key and the date with the following format : 
&lt;merchant&apos;s ID&gt;  + &apos;_&apos; + &lt;Record Type Name&gt;+ &apos;_&apos; + &lt;date formated as YYYYMMDD&gt; + &apos;_&apos; + &lt;Temporal Granularity&gt;.
Required and case sensitive.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>