force-app/main/default/objects/Performance_Data__c/fields/First_Buyback_Order_Paid_on__c.field-meta.xml
<CustomField>
    <fullName>First_Buyback_Order_Paid_on__c</fullName>
    <label>First Buyback Order Paid on</label>
    <type>Date</type>
</CustomField>