force-app/main/default/objects/Performance_Data__c/fields/GMV__c.field-meta.xml
<CustomField>
    <fullName>GMV__c</fullName>
    <label>G.M.V.</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>