force-app/main/default/objects/Performance_Data__c/fields/GMV_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>GMV_Last_30_Days__c</fullName>
    <label>GMV Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>