force-app/main/default/objects/Performance_Data__c/fields/Is_in_last_2_months__c.field-meta.xml
<CustomField>
    <fullName>Is_in_last_2_months__c</fullName>
    <formula>ADDMONTHS ( TODAY(), -2 ) &lt;= Date__c &amp;&amp; Date__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is in last 2 months</label>
    <type>Checkbox</type>
</CustomField>