force-app/main/default/objects/Performance_Data__c/fields/Is_in_last_3_weeks__c.field-meta.xml
<CustomField>
    <fullName>Is_in_last_3_weeks__c</fullName>
    <formula>TODAY() -  Date__c &lt;= 21 &amp;&amp; Date__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is in last 3 weeks</label>
    <type>Checkbox</type>
</CustomField>