force-app/main/default/objects/Performance_Data__c/fields/Is_in_last_8_days__c.field-meta.xml
<CustomField>
    <fullName>Is_in_last_8_days__c</fullName>
    <formula>TODAY() - Date__c &lt;= 8 &amp;&amp; Date__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is in last 8 days</label>
    <type>Checkbox</type>
</CustomField>