force-app/main/default/objects/Performance_Data__c/fields/Last_2_months_group__c.field-meta.xml
<CustomField>
    <fullName>Last_2_months_group__c</fullName>
    <formula>IF ( ADDMONTHS ( TODAY(), -2 ) &lt;=  Date__c &amp;&amp; Date__c &lt;= TODAY(), 
     IF ( ADDMONTHS ( TODAY(), -1 ) &lt;=  Date__c &amp;&amp; Date__c &lt;= TODAY(), 
          &apos;M0&apos;, 
          &apos;M-1&apos; ), 
     &apos;N/A&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 2 months group</label>
    <type>Text</type>
</CustomField>