force-app/main/default/objects/Performance_Data__c/fields/Last_3_weeks_group__c.field-meta.xml
<CustomField>
    <fullName>Last_3_weeks_group__c</fullName>
    <formula>IF ( TODAY() - Date__c &gt; 21, 
      &apos;N/A&apos;, 
      IF ( TODAY() - Date__c &lt; 0, 
           &apos;N/A&apos;, 
           IF ( TODAY() - Date__c &lt;= 7,
                &apos;S0&apos;, 
                IF ( TODAY() - Date__c &lt;= 14, 
                     &apos;S-1&apos;, 
                     &apos;S-2&apos; ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 3 weeks group</label>
    <type>Text</type>
</CustomField>