force-app/main/default/objects/Performance_Data__c/fields/Last_day_of_the_month__c.field-meta.xml
<CustomField>
    <fullName>Last_day_of_the_month__c</fullName>
    <formula>IF( Date__c =
    IF(
  MONTH(Date__c) = 12,
  DATE( YEAR(Date__c), 12, 31 ),
  DATE( YEAR(Date__c), MONTH (Date__c) + 1, 1 ) - 1 
),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of the month</label>
    <type>Checkbox</type>
</CustomField>