force-app/main/default/objects/Performance_Data__c/fields/Late_Processed_Cases__c.field-meta.xml
<CustomField>
    <fullName>Late_Processed_Cases__c</fullName>
    <label>Late processed cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>