force-app/main/default/objects/Performance_Data__c/fields/Late_Processing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Late_Processing_Rate__c</fullName>
    <label>Late Processing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>