force-app/main/default/objects/Performance_Data__c/fields/Late_Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Late_Response_Rate__c</fullName>
    <label>Late response rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>