force-app/main/default/objects/Performance_Data__c/fields/Late_Responses__c.field-meta.xml
<CustomField>
    <fullName>Late_Responses__c</fullName>
    <label>Late Responses</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>