force-app/main/default/objects/Performance_Data__c/fields/Late_Untracked_Delivery_Rate__c.field-meta.xml
<CustomField>
    <fullName>Late_Untracked_Delivery_Rate__c</fullName>
    <label>Late Delivery Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>