force-app/main/default/objects/Performance_Data__c/fields/Listings__c.field-meta.xml
<CustomField>
    <fullName>Listings__c</fullName>
    <label>Listings</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>