force-app/main/default/objects/Performance_Data__c/fields/LTDR__c.field-meta.xml
<CustomField>
    <fullName>LTDR__c</fullName>
    <description>Long Term Defective Rate (90 days cohort)</description>
    <label>Long Term Defective Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>