force-app/main/default/objects/Performance_Data__c/fields/LTDR_Cases__c.field-meta.xml
<CustomField>
    <fullName>LTDR_Cases__c</fullName>
    <description>Nb of orders with defective issue (90 days cohort)</description>
    <label>Long Term Defective Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>