force-app/main/default/objects/Performance_Data__c/fields/Merchant_Name_Date__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name_Date__c</fullName>
    <formula>Merchant__r.Name &amp; &quot; - &quot; &amp;
TEXT( YEAR ( Date__c ) )
&amp; 
LPAD ( TEXT ( MONTH ( Date__c ) ), 2, &quot;0&quot;)
&amp;
LPAD ( TEXT ( DAY ( Date__c ) ), 2, &quot;0&quot;)</formula>
    <label>Merchant Name &amp; Date</label>
    <type>Text</type>
</CustomField>