force-app/main/default/objects/Performance_Data__c/fields/Missing_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Missing_Accessories__c</fullName>
    <label>Missing Accessories</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>