force-app/main/default/objects/Performance_Data__c/fields/Monthly_Data_to_Delete__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Data_to_Delete__c</fullName>
    <description>Field used to indicate what are the Monthly Business Performance records that are eligible for deletion.</description>
    <formula>AND(
ISPICKVAL( Temporal_Granularity__c ,&quot;Monthly&quot;),
RecordType.Name =&quot;Business&quot;,
TODAY()- Date__c &gt;93,
Last_day_of_the_month__c =FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Data to Delete</label>
    <type>Checkbox</type>
</CustomField>