force-app/main/default/objects/Performance_Data__c/fields/NRR_Rate__c.field-meta.xml
<CustomField>
    <fullName>NRR_Rate__c</fullName>
    <label>NRR Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>