force-app/main/default/objects/Performance_Data__c/fields/Number_of_bids_on_diversification__c.field-meta.xml
<CustomField>
    <fullName>Number_of_bids_on_diversification__c</fullName>
    <label>Number of bids on diversification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>