force-app/main/default/objects/Performance_Data__c/fields/Number_of_Buyback_orders_paid__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Buyback_orders_paid__c</fullName>
    <label>Number of Buyback orders paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>