force-app/main/default/objects/Performance_Data__c/fields/Number_of_online_listings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_online_listings__c</fullName>
    <label>Number of online listings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>