force-app/main/default/objects/Performance_Data__c/fields/On_hold_Cases__c.field-meta.xml
<CustomField>
    <fullName>On_hold_Cases__c</fullName>
    <label>On-hold cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>