force-app/main/default/objects/Performance_Data__c/fields/On_hold_Rate__c.field-meta.xml
<CustomField>
    <fullName>On_hold_Rate__c</fullName>
    <label>On-hold rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>