force-app/main/default/objects/Performance_Data__c/fields/OTDR__c.field-meta.xml
<CustomField>
    <fullName>OTDR__c</fullName>
    <description>On Time Deivery Rate (30 days cohort)</description>
    <label>On Time Delivery Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>