force-app/main/default/objects/Performance_Data__c/fields/OTDR_Cases__c.field-meta.xml
<CustomField>
    <fullName>OTDR_Cases__c</fullName>
    <description>Nb of orders untracked or late (30 days cohort)</description>
    <label>On Time Delivery Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>