force-app/main/default/objects/Performance_Data__c/fields/OTDR_Last_100_Orders__c.field-meta.xml
<CustomField>
    <fullName>OTDR_Last_100_Orders__c</fullName>
    <description>&quot;On Time Delivery Rate on the last 100 orders going back up to 6 months (NULL if there are not 100 orders in 6 months)
Used only for MP for Selfcare sellers&quot;</description>
    <label>On Time Delivery Rate Last 100 Orders</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>