force-app/main/default/objects/Performance_Data__c/fields/Payment_rate__c.field-meta.xml
<CustomField>
    <fullName>Payment_rate__c</fullName>
    <label>Payment rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>