force-app/main/default/objects/Performance_Data__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <label>Penalty</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>