force-app/main/default/objects/Performance_Data__c/fields/Pending_orders_rate__c.field-meta.xml
<CustomField>
    <fullName>Pending_orders_rate__c</fullName>
    <label>Pending orders rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>