force-app/main/default/objects/Performance_Data__c/fields/Pending_SAV_24_hours__c.field-meta.xml
<CustomField>
    <fullName>Pending_SAV_24_hours__c</fullName>
    <label>Pending SAV 24 hours</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>