force-app/main/default/objects/Performance_Data__c/fields/Policy_Violation__c.field-meta.xml
<CustomField>
    <fullName>Policy_Violation__c</fullName>
    <label>Yellow Policy Violation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>