force-app/main/default/objects/Performance_Data__c/fields/Policy_Violation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Policy_Violation_Flag__c</fullName>
    <label>Policy Violation Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>