force-app/main/default/objects/Performance_Data__c/fields/POR__c.field-meta.xml
<CustomField>
    <fullName>POR__c</fullName>
    <description>Perfect Order Rate (30 days cohort)</description>
    <label>Perfect Order Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>