force-app/main/default/objects/Performance_Data__c/fields/POR_Cases__c.field-meta.xml
<CustomField>
    <fullName>POR_Cases__c</fullName>
    <description>Nb of orders not perfect (30 days cohort)</description>
    <label>Perfect Order Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>