force-app/main/default/objects/Performance_Data__c/fields/Processing_time_functional__c.field-meta.xml
<CustomField>
    <fullName>Processing_time_functional__c</fullName>
    <label>Processing time (functional)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>