force-app/main/default/objects/Performance_Data__c/fields/Promised_GMV__c.field-meta.xml
<CustomField>
    <fullName>Promised_GMV__c</fullName>
    <label>Promised GMV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>