force-app/main/default/objects/Performance_Data__c/fields/Refund_rate__c.field-meta.xml
<CustomField>
    <fullName>Refund_rate__c</fullName>
    <label>Refund rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>