force-app/main/default/objects/Performance_Data__c/fields/Response_time__c.field-meta.xml
<CustomField>
    <fullName>Response_time__c</fullName>
    <label>Response time</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>