force-app/main/default/objects/Performance_Data__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <label>Sales</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>