force-app/main/default/objects/Performance_Data__c/fields/Sales_Last_30_Days_BuyBack__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_30_Days_BuyBack__c</fullName>
    <label>Sales Last 30 Days - BuyBack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>