force-app/main/default/objects/Performance_Data__c/fields/Sales_limitation__c.field-meta.xml
<CustomField>
    <fullName>Sales_limitation__c</fullName>
    <label>Sales limitation</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>