force-app/main/default/objects/Performance_Data__c/fields/Score_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Score_CSAT__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score CSAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>